# example-mcp-server

./: README.md  pyproject.toml  server.py  tagentacle.toml
